# nputils

./: .gitignore  CMakeLists.txt  Doxyfile  README  README.dependencies  ReleaseNotes  TODO  nputilsBuildTreeSettings.cmake.in  nputilsConfig.cmake.in  wipe.sh
R/BOSS/: common.R  galtarget.R
codes/: CMakeLists.txt  README
codes/fastRR/: CMakeLists.txt  shellRR.cfg  shellRR.cpp
db/BOSS/: .load_spall.sh.swp  galtargetmeta.sql  load_spall.sh  load_target_info.sh  spall.cols  spall_core.txt  spall_flux.txt  spall_photo.txt  spall_resolve.txt
src/: CMakeLists.txt  README  npmisc.h
src/misc/: npcommon.h  npvecmath.h  npzip.h
src/npgsl/: CMakeLists.txt  npHistogram2D.cpp  npHistogram2D.h  npRandom.cpp  npRandom.h  npSpline.cpp  npSpline.h  npgslAdapt.h
src/npio/: CMakeLists.txt  fits_copy.c  fits_listhead.c  npTextFile.cpp  npTextFile.h
src/nppm/: CMakeLists.txt  Particles.cpp  Particles.h  cpppetsc.cpp  cpppetsc.h  np_petsc_utils.cpp  np_petsc_utils.h  nppm_algorithms.h
test/: CMakeLists.txt  README
test/npgsl/: CMakeLists.txt  npHistogram2d_test.cpp  npRandom_test.cpp  npSpline_test.cpp
test/npio/: CMakeLists.txt  fits_make_test_bintable.cpp  inputtextfile_comment.txt  inputtextfile_nocomment.txt  npTextFile_test.cpp
test/nppm/: CMakeLists.txt  Particles_test.cpp  cpppetsc_test.cpp
